@@ -1,0 +1,10 @@
+# $NetBSD: Makefile,v 1.1 2008/10/30 00:27:32 joerg Exp $
+
+NOMAN=	# define
+
+FILES=	dist/LICENSE.ipw2200-fw dist/ipw2200-bss.fw dist/ipw2200-ibss.fw \
+	dist/ipw2200-sniffer.fw
+
+FILESDIR=	/libdata/firmware/if_iwi
+
+.include <bsd.files.mk>
