@@ -1,0 +1,5 @@
+# $NetBSD: Makefile,v 1.1 2008/10/30 00:27:32 joerg Exp $
+
+SUBDIR+=	ipw3945 iwl4965
+
+.include <bsd.subdir.mk>
