@@ -1,0 +1,10 @@
+# $NetBSD: Makefile,v 1.1 2008/10/30 00:27:32 joerg Exp $
+
+NOMAN=	# define
+
+FILES=	dist/LICENSE.iwlwifi-4965-ucode dist/README.iwlwifi-4965-ucode \
+	dist/iwlwifi-4965-1.ucode
+
+FILESDIR=	/libdata/firmware/if_iwn
+
+.include <bsd.files.mk>
